--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,20 @@ spring:
     redis:
       port: ${REDIS_EXTERNAL_PORT}
 
+  jwt:
+    secret: ${JWT_SECRET}
+    expiration:
+      access: ${JWT_EXPIRE_ACCESS}
+      refresh: ${JWT_EXPIRE_REFRESH}
+
+  security:
+    oauth2.client:
+      registration:
+        google:
+          redirect-uri: "{baseUrl}/login/oauth2/code/google"
+          client-id: ${GOOGLE_CLIENT_ID}
+          client-secret: ${GOOGLE_CLIENT_SECRET}
+
 api:
   kobis: ${KOBIS_API_KEY}
   kmdb: ${KMDB_API_KEY}
