--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,23 @@ api:
   kobis: ${KOBIS_API_KEY}
   kmdb: ${KMDB_API_KEY}
 
+movie:
+  cgv:
+    name: CGV
+    main-url: https://m.cgv.co.kr/WebApp
+    theater-default-endpoint: /TheaterV4/Default.aspx
+    theater-detail-endpoint: /TheaterV4/TheaterDetail.aspx?tc=
+  lotte:
+    name: 롯데시네마
+    main-url: https://www.lottecinema.co.kr
+    theater-default-endpoint: /LCWS/Cinema/CinemaData.aspx
+  mega:
+    name: 메가박스
+    main-url: https://www.megabox.co.kr
+    theater-default-endpoint: /theater/list
+    theater-detail-endpoint: /on/oh/ohc/Brch/infoPage.do
+
+
 # =========================== LOCAL  ===========================
 ---
 spring.config.activate.on-profile: local
