--- a/infra/dockerfile_nginx
+++ b/infra/dockerfile_nginx
@@ -1,10 +1,17 @@
 FROM nginx:alpine
 
+RUN apk update && apk upgrade && \
+    apk add --no-cache npm openssl
+
 COPY nginx_config/default.conf /etc/nginx/conf.d/default.conf
 
 COPY nginx_config/nginxSetting.sh .
 
 RUN chmod +x nginxSetting.sh && mkdir -p /etc/ssl
+
+WORKDIR /app
+
+RUN npm install js-cookie
 
 WORKDIR /nginx
 
