--- a/infra/nginx_config/default.conf
+++ b/infra/nginx_config/default.conf
@@ -15,6 +15,32 @@ server {
     ssl_certificate     /etc/ssl/CineFinder.BESP.xyz.crt;
     ssl_certificate_key /etc/ssl/CineFinder.BESP.xyz.key;
 
+    location /api/login/ {
+        return 302 https://$host/oauth2/authorization/kakao;
+    }
+
+    location /login {
+        proxy_pass http://host.docker.internal:8081/login;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /oauth2/ {
+        proxy_pass http://host.docker.internal:8081/oauth2/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location /api/ {
         proxy_pass http://host.docker.internal:8081/api/;
         proxy_http_version 1.1;
