--- a/infra/nginx_config/default.conf
+++ b/infra/nginx_config/default.conf
@@ -1,6 +1,5 @@
 server {
     listen 80;
-    server_name CineFinder.BESP.xyz;
 
     location / {
         return 301 https://$host$request_uri;
@@ -9,7 +8,6 @@ server {
 
 server {
     listen 443 ssl;
-    server_name CineFinder.BESP.xyz;
 
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_certificate     /etc/ssl/CineFinder.BESP.xyz.crt;
@@ -53,7 +51,7 @@ server {
     }
 
     location / {
-        proxy_pass http://host.docker.internal:3000/;
+        proxy_pass http://frontend:80/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
