feat: 멀티플렉스 3사 영화 코드 및 상세정보 관리 기능 추가
1. 멀티플렉스 3사 API 호출하여 영화명 정규화 및 개별 영화코드 추출
2. KMDB API 호출하여 영화 상세정보 저장
3. 해당 로직 스케줄러 설정
4. 기존 영화 상세정보 패치 로직 수정(캐시 → DB → API 호출)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,15 @@ api:
   kmdb:
     request-url: ${KMDB_REQUEST_URL}
     service-key: ${KMDB_SERVICE_KEY}
+  cgv:
+    code:
+      request-url: ${CGV_CODE_REQUEST_URL}
+  mega-box:
+    code:
+      request-url: ${MEGA_BOX_CODE_REQUEST_URL}
+  lotte-cinema:
+    code:
+      request-url: ${LOTTE_CINEMA_CODE_REQUEST_URL}
 
 movie:
   cgv:
