Refactor: 닉네임 설정 경로에 /#/ 추가

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -95,6 +95,16 @@ services:
     env_file:
       - .env
 
+  frontend:
+    build:
+      context: ../../cinefinder-front
+      dockerfile: Dockerfile
+    container_name: frontend
+    ports:
+      - "3000:80"
+    networks:
+      - CineFinder_network
+
 networks:
   CineFinder_network:
     driver: bridge
