Feat: docker-compose 파일에 kafka 설정, KafkaConfig 설정, 테스트를 위한 로직 추가(메세지 받았을 때 elasticSearch랑 kafka에 저장)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,17 @@ spring:
             user-info-uri: "https://kapi.kakao.com/v2/user/me"
             user-name-attribute: id
 
+  kafka:
+    bootstrap-servers: localhost:10000,localhost:10001,localhost:10002 # 카프카 서버 주소
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer:
+      group-id: chat-log-consumer-group
+      auto-offset-reset: earliest
+    template:
+      default-topic: chat-log
+
 #    oauth2.client:
 #      registration:
 #        google:
@@ -95,6 +106,9 @@ spring:
   data:
     redis:
       host: ${LOCAL_HOST}
+    elasticsearch:
+      repositories:
+        enabled: true
 
   elasticsearch:
     uris: http://${LOCAL_HOST}:${ES_EXTERNAL_PORT_1}/
