--- a/build.gradle
+++ b/build.gradle
@@ -34,11 +34,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.jsoup:jsoup:1.20.1'
 	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-
 	
 	//elasticsearch
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
+	//kafka
+	implementation 'org.springframework.kafka:spring-kafka'
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
