--- a/infra/nginx_config/default.conf
+++ b/infra/nginx_config/default.conf
@@ -1,3 +1,10 @@
+upstream cinefinder_backend {
+    least_conn;
+    server backend1:8081;
+    server backend2:8081;
+    server backend3:8081;
+}
+
 server {
     listen 80;
 
@@ -18,7 +25,7 @@ server {
     }
 
     location /login {
-        proxy_pass http://host.docker.internal:8081/login;
+        proxy_pass http://cinefinder_backend/login;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -29,7 +36,7 @@ server {
     }
 
     location /oauth2/ {
-        proxy_pass http://host.docker.internal:8081/oauth2/;
+        proxy_pass http://cinefinder_backend/oauth2/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -40,7 +47,18 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://host.docker.internal:8081/api/;
+        proxy_pass http://cinefinder_backend/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /CineFinder-ws/ {
+        proxy_pass http://cinefinder_backend/CineFinder-ws/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
