--- a/infra/dockerfile_nginx
+++ b/infra/dockerfile_nginx
@@ -1,18 +1,16 @@
+# 기존에 있던 FROM nginx:alpine 유지
 FROM nginx:alpine
 
 RUN apk update && apk upgrade && \
-    apk add --no-cache npm openssl
+    apk add --no-cache npm
+
+# 인증서 복사
+COPY ./certs/localhost.pem /etc/ssl/cert.pem
+COPY ./certs/localhost-key.pem /etc/ssl/key.pem
 
 COPY nginx_config/default.conf /etc/nginx/conf.d/default.conf
-
-COPY nginx_config/nginxSetting.sh .
-
-RUN chmod +x nginxSetting.sh && mkdir -p /etc/ssl
-
 WORKDIR /app
-
 RUN npm install js-cookie
 
 WORKDIR /nginx
-
-ENTRYPOINT ["sh", "/nginxSetting.sh"]
+CMD ["nginx", "-g", "daemon off;"]
