--- a/infra/nginx_config/default.conf
+++ b/infra/nginx_config/default.conf
@@ -1,6 +1,11 @@
+upstream cinefinder_backend {
+    least_conn;
+    server backend1:8081;
+    server backend2:8081;
+}
+
 server {
     listen 80;
-    server_name CineFinder.BESP.xyz;
 
     location / {
         return 301 https://$host$request_uri;
@@ -9,18 +14,19 @@ server {
 
 server {
     listen 443 ssl;
-    server_name CineFinder.BESP.xyz;
+
+    ssl_certificate     /etc/ssl/cert.pem;
+    ssl_certificate_key /etc/ssl/key.pem;
 
     ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_certificate     /etc/ssl/CineFinder.BESP.xyz.crt;
-    ssl_certificate_key /etc/ssl/CineFinder.BESP.xyz.key;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
 
     location /api/login/ {
         return 302 https://$host/oauth2/authorization/kakao;
     }
 
     location /login {
-        proxy_pass http://host.docker.internal:8081/login;
+        proxy_pass http://cinefinder_backend/login;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -31,7 +37,7 @@ server {
     }
 
     location /oauth2/ {
-        proxy_pass http://host.docker.internal:8081/oauth2/;
+        proxy_pass http://cinefinder_backend/oauth2/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -42,7 +48,18 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://host.docker.internal:8081/api/;
+        proxy_pass http://cinefinder_backend/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /CineFinder-ws/ {
+        proxy_pass http://cinefinder_backend/CineFinder-ws/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
