Feat: local 환경으로 빌드 환경 수정

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -100,9 +100,9 @@ services:
     restart: always
     env_file:
       - .env
-    depends_on:
-      - backend1
-      - backend2
+#    depends_on:
+#      - backend1
+#      - backend2
 
   rabbitmq:
     build:
@@ -119,39 +119,39 @@ services:
     networks:
       - CineFinder_network
 
-  backend1:
-    build:
-      context: ../
-      dockerfile: Dockerfile
-    container_name: backend1
-    ports:
-      - "8081:8081"
-    networks:
-      - CineFinder_network
-    env_file:
-      - .env
-    depends_on:
-      elasticsearch:
-          condition: service_healthy
-      mysql:
-          condition: service_healthy
-
-  backend2:
-    build:
-      context: ../
-      dockerfile: Dockerfile
-    container_name: backend2
-    ports:
-      - "8082:8081"
-    networks:
-      - CineFinder_network
-    env_file:
-      - .env
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
-      mysql:
-        condition: service_healthy
+#  backend1:
+#    build:
+#      context: ../
+#      dockerfile: Dockerfile
+#    container_name: backend1
+#    ports:
+#      - "8081:8081"
+#    networks:
+#      - CineFinder_network
+#    env_file:
+#      - .env
+#    depends_on:
+#      elasticsearch:
+#          condition: service_healthy
+#      mysql:
+#          condition: service_healthy
+#
+#  backend2:
+#    build:
+#      context: ../
+#      dockerfile: Dockerfile
+#    container_name: backend2
+#    ports:
+#      - "8082:8081"
+#    networks:
+#      - CineFinder_network
+#    env_file:
+#      - .env
+#    depends_on:
+#      elasticsearch:
+#        condition: service_healthy
+#      mysql:
+#        condition: service_healthy
 
   Kafka00Service:
     image: bitnami/kafka:3.7.0
@@ -172,7 +172,7 @@ services:
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:10000
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://Kafka00Service:9092,EXTERNAL://host.docker.internal:10000
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://Kafka00Service:9092,EXTERNAL://localhost:10000
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       # 클러스터 설정
@@ -203,7 +203,7 @@ services:
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:10000
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://Kafka01Service:9092,EXTERNAL://host.docker.internal:10001
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://Kafka01Service:9092,EXTERNAL://localhost:10001
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       # 클러스터 설정
@@ -234,7 +234,7 @@ services:
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:10000
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://Kafka02Service:9092,EXTERNAL://host.docker.internal:10002
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://Kafka02Service:9092,EXTERNAL://localhost:10002
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       # 클러스터 설정
