--- a/infra/nginx_config/default.conf
+++ b/infra/nginx_config/default.conf
@@ -1,9 +1,3 @@
-upstream cinefinder_backend {
-    least_conn;
-    server backend1:8081;
-    server backend2:8081;
-}
-
 server {
     listen 80;
 
@@ -26,7 +20,7 @@ server {
     }
 
     location /login {
-        proxy_pass http://cinefinder_backend/login;
+        proxy_pass http://host.docker.internal:8081/login;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -37,7 +31,7 @@ server {
     }
 
     location /oauth2/ {
-        proxy_pass http://cinefinder_backend/oauth2/;
+        proxy_pass http://host.docker.internal:8081/oauth2/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -48,7 +42,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://cinefinder_backend/api/;
+        proxy_pass http://host.docker.internal:8081/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -59,7 +53,7 @@ server {
     }
 
     location /CineFinder-ws/ {
-        proxy_pass http://cinefinder_backend/CineFinder-ws/;
+        proxy_pass http://host.docker.internal:8081/CineFinder-ws/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
