--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
   rabbitmq:
     username: ${RABBITMQ_LOGIN}
     password: ${RABBITMQ_PASSWORD} #default Password
-    host: rabbitmq # default host
+    host: localhost # default host
     port: ${RABBITMQ_PORT}      #default port
 
   security:
@@ -51,7 +51,7 @@ spring:
             user-name-attribute: id
 
   kafka:
-    bootstrap-servers: Kafka00Service:10000,Kafka01Service:10001,Kafka02Service:10002 # 카프카 서버 주소
+    bootstrap-servers: localhost:10000,localhost:10001,localhost:10002 # 카프카 서버 주소
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
@@ -108,17 +108,17 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://mysql:${MYSQL_INTERNAL_PORT}/${MYSQL_DB_NAME}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:${MYSQL_EXTERNAL_PORT}/${MYSQL_DB_NAME}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 
   data:
     redis:
-      host: redis
+      host: localhost
     elasticsearch:
       repositories:
         enabled: true
 
   elasticsearch:
-    uris: http://elasticsearch:${ES_EXTERNAL_PORT_1}/
+    uris: http://localhost:${ES_EXTERNAL_PORT_1}/
     connection-timeout: 120s
     socket-timeout: 120s
 
