Feat: kafka에서 10초마다 ES로 한번에 bulk저장하도록 로직 변경

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -90,6 +90,7 @@ services:
     build:
       context: .
       dockerfile: dockerfile_nginx
+    container_name: CF_nginx
     ports:
       - "80:80"
       - "443:443"
