--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -136,11 +136,11 @@ services:
         condition: service_healthy
       mysql:
         condition: service_healthy
-    healthcheck:
-      test: ["CMD-SHELL", "curl -s http://localhost:8081 || exit 1"]
-      interval: 20s
-      timeout: 5s
-      retries: 5
+#    healthcheck:
+#      test: ["CMD-SHELL", "curl -s http://localhost:8081 || exit 1"]
+#      interval: 20s
+#      timeout: 5s
+#      retries: 5
 
   backend2:
     build:
@@ -158,8 +158,8 @@ services:
         condition: service_healthy
       mysql:
         condition: service_healthy
-      backend1:
-        condition: service_healthy
+#      backend1:
+#        condition: service_healthy
 
 
   Kafka00Service:
@@ -274,16 +274,16 @@ services:
     networks:
       - CineFinder_network
 
-  k6:
-    image: grafana/k6
-    volumes:
-      - ./scripts:/scripts
-    entrypoint: [ "k6", "run", "/scripts/ws-chat-test.js" ]
-    depends_on:
-      - backend1
-      - backend2
-    networks:
-      - CineFinder_network
+#  k6:
+#    image: grafana/k6
+#    volumes:
+#      - ./scripts:/scripts
+#    entrypoint: [ "k6", "run", "/scripts/ws-chat-test.js" ]
+#    depends_on:
+#      - backend1
+#      - backend2
+#    networks:
+#      - CineFinder_network
 
 volumes:
   Kafka00:
