--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.jsoup:jsoup:1.20.1'
 	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+	implementation 'org.openkoreantext:open-korean-text:2.1.0'
 
 	//websocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
