feat: websocket 부하 테스트 (#66)
* Feat: kafka에서 10초마다 ES로 한번에 bulk저장하도록 로직 변경

* Feat: 중복 저장 방지를 위한 로직 추가

* Feat: websocket 과부하 테스트 세팅

* Feat: kafka consumer의 poll, commit방식으로 ES에 데이터 bulk업데이트가 되도록 로직 구현

* Feat: kafkaconsumer 직접 구현으로 인한 topic subscribe 추가

1. kafkaconsumer 직접 구현으로 인한 topic subscribe 추가
2. datainit 시, kafka topic && elasticsearch index 생성
3. websocket 부하 테스트 환경으로 구축(k6)

* Feat: kafka debug 코드 추가 및 파티션으로 나눠서 Kafka, ES에 저장하도록 변경

* Feat: webpage 부하 테스트

* Feat: webpage 부하 테스트

* Feat: 부하테스트 최종 코드 및 kafka 세팅 완료

* Feat: 피드백 내용 수정
sendMessageWithRetry -> saveBulk에서 index네임 수정
이전 채팅 내역 불러오는 기초 로직 구현

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -59,7 +59,7 @@ services:
       - .env
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" , "-u", "${MYSQL_USER}", "-p${MYSQL_PASSWORD}" ]
-      interval: 5s
+      interval: 15s
       timeout: 5s
       retries: 5
     networks:
@@ -90,6 +90,7 @@ services:
     build:
       context: .
       dockerfile: dockerfile_nginx
+    container_name: CF_nginx
     ports:
       - "80:80"
       - "443:443"
@@ -97,7 +98,7 @@ services:
       - ./nginx_config/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - CineFinder_network
-    restart: always
+#    restart: always
     env_file:
       - .env
     depends_on:
@@ -273,6 +274,28 @@ services:
     networks:
       - CineFinder_network
 
+#  k6:
+#    image: grafana/k6
+#    volumes:
+#      - ./scripts:/scripts
+#    entrypoint: [ "k6", "run", "/scripts/ws-chat-test.js" ]
+#    depends_on:
+#      - backend1
+#      - backend2
+#    networks:
+#      - CineFinder_network
+
+#  artillery:
+#    image: artilleryio/artillery
+#    container_name: artillery
+#    volumes:
+#      - ./scripts:/src
+#    working_dir: /src
+#    command: ["run",  "--output", "report.json",  "loadtest.yml"]
+#    depends_on:
+#      - nginx
+#    networks:
+#      - CineFinder_network
 
 volumes:
   Kafka00:
