Refactor: 필터링 API URL, KEY 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -79,6 +79,10 @@ api:
   lotte-cinema:
     code:
       request-url: ${LOTTE_CINEMA_CODE_REQUEST_URL}
+  bad-word-filter:
+    code:
+      request-url: ${BAD_WORD_FILTER_URL}
+      service-key: ${BAD_WORD_FILTER_KEY}
 
 movie:
   cgv:
