--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   elasticsearch:
     build:
       context: .
@@ -79,7 +80,7 @@ services:
   frontend:
     build:
       context: ../../CineFinder_FRONTEND
-      dockerfile: Dockerfile
+      dockerfile: dockerfile
     container_name: frontend
     ports:
       - "3000:80"
@@ -175,7 +176,7 @@ services:
       - KAFKA_CFG_BROKER_ID=0
       - KAFKA_CFG_NODE_ID=0
       - KAFKA_KRAFT_CLUSTER_ID=HsDBs9l6UUmQq7Y5E6bNlw # 고유 클러스터 ID, 모든 브로커에 동일하게 설정
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@Kafka00Service:9093,1@Kafka01Service:9093,2@Kafka02Service:9093
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@Kafka00Service:9093,1@Kafka01Service:9093
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
       # 리스너 설정
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
@@ -206,7 +207,7 @@ services:
       - KAFKA_CFG_BROKER_ID=1
       - KAFKA_CFG_NODE_ID=1
       - KAFKA_KRAFT_CLUSTER_ID=HsDBs9l6UUmQq7Y5E6bNlw # 고유 클러스터 ID, 모든 브로커에 동일하게 설정
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@Kafka00Service:9093,1@Kafka01Service:9093,2@Kafka02Service:9093
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@Kafka00Service:9093,1@Kafka01Service:9093
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
       # 리스너 설정
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
@@ -224,36 +225,6 @@ services:
     volumes:
       - Kafka01:/bitnami/kafka
 
-  Kafka02Service:
-    image: bitnami/kafka:3.7.0
-    restart: unless-stopped
-    container_name: Kafka02Container
-    ports:
-      - '9094:9092' # 내부 네트워크 통신을 위한 PLAINTEXT 리스너
-      - '10002:10000' # 외부 접근을 위한 EXTERNAL 리스너
-    environment:
-      # KRaft 설정
-      - KAFKA_ENABLE_KRAFT=yes # KRaft 모드 활성화
-      - KAFKA_CFG_BROKER_ID=2
-      - KAFKA_CFG_NODE_ID=2
-      - KAFKA_KRAFT_CLUSTER_ID=HsDBs9l6UUmQq7Y5E6bNlw # 고유 클러스터 ID, 모든 브로커에 동일하게 설정
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@Kafka00Service:9093,1@Kafka01Service:9093,2@Kafka02Service:9093
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      # 리스너 설정
-      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-      - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:10000
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://Kafka02Service:9092,EXTERNAL://host.docker.internal:10002
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      # 클러스터 설정
-      - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=2
-      - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=2
-      - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=2
-    networks:
-      - CineFinder_network
-    volumes:
-      - Kafka02:/bitnami/kafka
 
   KafkaWebUiService:
     image: provectuslabs/kafka-ui:latest
@@ -270,9 +241,20 @@ services:
     depends_on:
       - Kafka00Service
       - Kafka01Service
-      - Kafka02Service
     networks:
       - CineFinder_network
+
+  sentiment:
+    build:
+      context: .
+      dockerfile: dockerfile_python
+    container_name: sentiment
+    ports:
+      - "8000:8000"
+    networks:
+      - CineFinder_network
+    env_file:
+      - .env
 
 #  k6:
 #    image: grafana/k6
