--- a/infra/dockerfile_python
+++ b/infra/dockerfile_python
@@ -11,7 +11,7 @@ ENV PYTHONUNBUFFERED 1
 # pip 업그레이드 및 기본 도구 설치
 RUN apt-get update && apt-get install -y \
     git \
-    && pip install --upgrade pip
+    && pip install --upgrade pip && pip install "numpy<2.0"
 
 # requirements 미리 작성 (아래 참조)
 COPY ./python/requirements.txt .
