Feat: yml세팅 및 import 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,6 +68,7 @@ api:
   kmdb:
     request-url: ${KMDB_REQUEST_URL}
     service-key: ${KMDB_SERVICE_KEY}
+    reuqest-parameter: ${KMDB_REQUEST_PARAMETER}
   daum:
     request-url: ${DAUM_REQUEST_URL}
   cgv:
